# ios-usb-automation

./: .gitignore  README.md  pyproject.toml  requirements.txt
examples/: basic_automation.py  enumerate_devices.py  managed_automation.py  tunnel_demo.py
scripts/: rebuild_preinstalled_wda.sh
src/ios_usbmuxd/: __init__.py  client.py  device.py  exceptions.py  protocol.py  tunnel.py  wda_client.py  wda_launcher.py
src/ios_usbmuxd.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: test_client.py  test_direct_tunnel.py  test_protocol.py  test_safari_home_swipes.py  test_wda_launcher.py
